<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="TCS">Triangle Circle Square</string>
    <string name="credits">Credits</string>
    <string name="play">Play</string>
    <string name="howto">HowTo</string>
    <string name="QQ">MORE PEW PEW LESS QQ</string>
    <string name="characterSelect">Choose your character</string>
    
    <string name="circle">circle</string>
    <string name="triangle">triangle</string>
	<string name="square">square</string>
    
</resources>
