<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/characterSelectCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characterSelect" />
     
    <ImageView
        android:id="@+id/btnSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/characterSelectCopy"
        android:clickable="true"
        android:contentDescription="@string/square"
        android:onClick="onSquareSelect"
        android:src="@drawable/square" />

    <ImageView
        android:id="@+id/btnTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/characterSelectCopy"
        android:layout_toRightOf="@+id/btnSquare"
        android:clickable="true"
        android:contentDescription="@string/triangle"
        android:onClick="onTriangleSelect"
        android:src="@drawable/triangle" />

    <ImageView
        android:id="@+id/btnCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/characterSelectCopy"
        android:layout_toRightOf="@+id/btnTriangle"
        android:clickable="true"
        android:contentDescription="@string/circle"
        android:onClick="onCircleSelect"
        android:src="@drawable/circle" />

</RelativeLayout>
